modified:   scripts/sklauncher_mode.sh
Huge changes to the script.